# PistacheFactorial

./: CMakeLists.txt  README.md
.cache/clangd/index/: factorial.cpp.0EFB3F38DAF5A30E.idx  factorial.h.EFFA24994CABEBB1.idx  main.cpp.9A90914B0FBF7D72.idx
data/: books.json
include/: book.hpp  factorial.h
src/: book.cpp  factorial.cpp  main.cpp
test/: CMakeLists.txt  book_service_test.cpp
test/R/: test.R
test/csharp/: BookService.csproj  Program.cs
test/go/: book_service_test.go  test.go
test/java/: Main.java
test/javascript/: package-lock.json  test.html  test.js
test/julia/: install_packages.jl  test.jl  test_get.jl
test/julia/MyProject/: Manifest.toml
test/python/: test.py
test/rust/: Cargo.toml
test/rust/src/: main.rs
test/rust_get/src/: main.rs
